# local-document-redactor

./: .gitignore  CLAUDE.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  run.bat  run.sh
docs/superpowers/plans/: 2026-07-14-email-to-markdown-redaction.md  2026-07-14-office-doc-to-pdf-redaction.md  2026-07-14-pattern-redaction-and-zip.md  2026-07-14-removal-universal-rename-pptx.md
docs/superpowers/specs/: 2026-07-13-filename-folder-keyword-redaction-design.md  2026-07-14-email-to-markdown-redaction-design.md  2026-07-14-msg-to-markdown-redaction-design.md  2026-07-14-office-doc-to-pdf-redaction-design.md  2026-07-14-pattern-redaction-and-zip-design.md  2026-07-14-removal-universal-rename-pptx-design.md
src/document_redactor/: __init__.py  batch_service.py  doc_converter.py  email_service.py  excel_service.py  file_service.py  keyword_matcher.py  models.py  name_redactor.py  office_service.py  pattern_matcher.py  pdf_service.py  pptx_service.py
tests/: conftest.py  test_app_smoke.py  test_batch_service.py  test_doc_converter.py  test_email_service.py  test_excel_service.py  test_file_service.py  test_keyword_matcher.py  test_name_redactor.py  test_office_service.py  test_pattern_matcher.py  test_pdf_service.py  test_pptx_service.py
