[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "document-redactor"
version = "0.1.0"
description = "로컬 엑셀·PDF 키워드 검사 및 삭제 도구"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.33",
    "openpyxl>=3.1",
    "PyMuPDF>=1.24",
    "pydantic>=2.6",
    "extract-msg>=0.54",
    "python-pptx>=0.6.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
